src/objects/Apttus_Config2__TempRenewAssetGroup__c.object
<CustomObject>
    <description>Temporary object to store renew asset group processed by RenewOpportunityJob</description>
    <fields>
        <fullName>Apttus_Config2__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the sold to account</description>
        <inlineHelpText>ID of the sold to account</inlineHelpText>
        <label>Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Temp Renew Asset Groups</relationshipLabel>
        <relationshipName>TempRenewAssetGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConfigurationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated product configuration</description>
        <inlineHelpText>ID of the associated product configuration</inlineHelpText>
        <label>Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Temp Renew Asset Groups</relationshipLabel>
        <relationshipName>TempRenewAssetGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EndDate__c</fullName>
        <description>The renewal end date</description>
        <inlineHelpText>The renewal end date</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Error__c</fullName>
        <description>The error message</description>
        <inlineHelpText>The error message</inlineHelpText>
        <label>Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExecutionMode__c</fullName>
        <description>The renewal execution mode</description>
        <inlineHelpText>The renewal execution mode</inlineHelpText>
        <label>Execution Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                    <default>true</default>
                    <label>Auto</label>
                </value>
                <value>
                    <fullName>OnDemand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GroupFieldValues__c</fullName>
        <description>The group field values</description>
        <inlineHelpText>The group field values</inlineHelpText>
        <label>Group Field Values</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated price list</description>
        <inlineHelpText>ID of the associated price list</inlineHelpText>
        <label>Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Temp Renew Asset Groups</relationshipLabel>
        <relationshipName>TempRenewAssetGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SourceBusinessObjectId__c</fullName>
        <description>ID of the business object associated with the auto renewal. Only applicable for &quot;AUTO&quot; execution mode.</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of the business object associated with the auto renewal. Only applicable for &quot;AUTO&quot; execution mode.</inlineHelpText>
        <label>Source Business Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StartDate__c</fullName>
        <description>The renewal start date</description>
        <inlineHelpText>The renewal start date</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Status__c</fullName>
        <description>The renewal status</description>
        <inlineHelpText>The renewal status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Renew Assets</fullName>
                </value>
                <value>
                    <fullName>Apply Rule</fullName>
                </value>
                <value>
                    <fullName>Update Price</fullName>
                </value>
                <value>
                    <fullName>Sync Cart</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Temp Renew Asset Group</label>
    <nameField>
        <displayFormat>RG-{0000000}</displayFormat>
        <label>Group Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Temp Renew Asset Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>